2011-12-04 mmichaud <michael.michaud@free.fr>
    * Now accept a zipped shapefile without dbf file
    * SimpleQueryPlugIn : fixed bug 3442147 (plugin could show wrong layer list 
      when two projects were opened).

2011-12-02 garuta <giuseppe_aruta@yahoo.it>
	* Add small icons (16x16) to NewTaskPlugIn and SaveDatasetsPlugIn
	  in the top/context menus

2011-11-23 mmichaud <michael.michaud@free.fr>
    * Replaced 3 first icons in the toolbar thanks to Peppe (previous one
      did not have the regular 20x20 size.

2011-11-21 mmichaud <michael.michaud@free.fr>
    * Remove FillPatterns from src directory
    
2011-11-20 mmichaud <michael.michaud@free.fr>
    * Fixed bug 3440346 in AttributeCalculator. The plugin is now more robust
      if whitespace are omitted.

2011-11-11 mmichaud <michael.michaud@free.fr>
    * PersistentBlackboard now uses UTF-8 instead of local charset to read/write
      into the utf-8 workbench-state.xml file.
    
2011-11-09 mmichaud <michael.michaud@free.fr>
    Changes from discussion held on 2011-11-04 and 2011-11-05
    * Move jpg images from com.vividsolutions.workbench.ui.images directory used
      by to FillPatternFactory to lib/ext/FillPatterns (to be used with 
      FillPatternFactory -user defined pattern - or from CadPlan extension)
    * Move batik jar from core to plus directory
    * Deactivate SaveImageAsSVGPlugIn if Batik is not found in the classpath
      (change in PlugInManager class)

2011-11-09
    * Fixed EditSelectedFeaturePlugIn : the geometry change made in the
      WKT editor had no effect on the geometry after validation.

2011-11-08 mmichaud <michael.michaud@free.fr>
    * Fixed persistence of OpenProject / SaveProjectAs [ID 3434161]
      org.openjump.core.ui.plugin.file.open.SelectProjectFilesPanel
      org.openjump.core.ui.plugin.file.open.OpenProjectWizard
      com.vividsolutions.jump.workbench.ui.plugin.SaveProjectAsPlugIn
    * Internationalization of PasteItemsPlugIn and PasteLayerPlugIn
