@@ -1,0 +1,42 @@
+package de.fho.jump.pirol.utilities.FormulaParsing.Operations;
+
+import com.vividsolutions.jump.feature.Feature;
+
+import de.fho.jump.pirol.utilities.FormulaParsing.FormulaValue;
+
+
+/**
+ * Class to handle additions within a formula.
+ *
+ *  10 dic 2011 
+ *  @author Giuseppe Aruta
+ *  
+ * Common logarithm (b = 10) class
+ * 
+ **/
+
+
+
+public class Log10Operation extends FormulaValue {
+	 protected FormulaValue value = null;
+	 
+	    public Log10Operation(FormulaValue value) {
+	        super();
+	        this.value = value;
+	    }
+
+	   
+	    public double getValue(Feature feature)  {
+	        return StrictMath.log10(this.value.getValue(feature));
+	    }
+	    
+	    public boolean isFeatureDependent() {
+	        return this.value.isFeatureDependent();
+	    }
+	    
+	    public String toString() {
+	        return "StrictMath.log10("+ this.value.toString() +")";
+	    }
+
+		
+	}
